# Twitz

./: AppImageBuilder.yml  README.md  meson.build  pm.mirko.twitz.yml  requirements.txt  snapcraft.yaml
.github/workflows/: build_pkgs_release.yml  build_pkgs_unstable.yml
data/: meson.build  pm.mirko.Twitz.appdata.xml.in  pm.mirko.Twitz.desktop.in  pm.mirko.Twitz.gschema.xml
debian/: changelog  control  copyright
po/: POTFILES  meson.build
src/: about.py  about.ui  chat.py  globals.py  login.py  login.ui  main.py  meson.build  player.py  preferences.py  preferences.ui  style.css  twitz.gresource.xml  twitz.in  window.py  window.ui
